--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,15 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
-    <title>elm-starfighter</title>
-    <link rel="stylesheet" href="./style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./elm.js"></script>
-    <script src="./main.js"></script>
+    <script src="./main.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <header class="site-header">
+    </header>
+    <div id="elm"></div>
+    <footer class="site-footer">
+    </footer>
+  </body>
 </html>
